src/test/ui/borrowck/borrowck-assign-to-constants.mir.stderr
error[E0594]: cannot assign to immutable static item `foo`
  --> $DIR/borrowck-assign-to-constants.rs:18:5
   |
LL |     foo = 6; //[ast]~ ERROR cannot assign to immutable static item
   |     ^^^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
